force-app/main/default/objects/ServiceAuthorization__mdt/ServiceAuthorization__mdt.object-meta.xml
<CustomObject>
    <label>ServiceAuthorization</label>
    <pluralLabel>ServiceAuthorization</pluralLabel>
</CustomObject>