force-app/main/default/objects/ServiceAuthorization__mdt/fields/Attempts__c.field-meta.xml
<CustomField>
    <fullName>Attempts__c</fullName>
    <description>Número de tentativas para o envio do token no componente pidTokenValidate.</description>
    <inlineHelpText>Número de tentativas para o envio do token no componente pidTokenValidate.</inlineHelpText>
    <label>Attempts</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>