force-app/main/default/objects/ServiceAuthorization__mdt/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <description>Tempo de espera em minutos para o recebimento do token no componente pidTokenValidate.</description>
    <inlineHelpText>Tempo de espera em minutos para o recebimento do token no componente pidTokenValidate.</inlineHelpText>
    <label>Interval</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>