force-app/main/default/objects/ServiceAuthorization__mdt/fields/Message_Code__c.field-meta.xml
<CustomField>
    <fullName>Message_Code__c</fullName>
    <description>Código da mensagem SMS do sistema CSS</description>
    <label>Message Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>