force-app/main/default/objects/ServiceAuthorization__mdt/listViews/AllFields.listView-meta.xml
<ListView>
    <fullName>AllFields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Attempts__c</columns>
    <columns>Interval__c</columns>
    <filterScope>Everything</filterScope>
    <label>AllFields</label>
    <language>en_US</language>
</ListView>